added Interfaces in index

--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
 			<nav class="navbar navbar-default" id="common">
 				<div class="navbar-header">
 					<img src="../Images/logo.png">
-					<p class="navbar-text" id="nav-id">Common</p>
+					<p class="navbar-text" id="nav-id">Common Interfaces</p>
 				</div>
 			</nav>
 			<section> 
