changed moulding -molding

--- a/Public/delivery.html
+++ b/Public/delivery.html
@@ -18,7 +18,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <img id="modal-img" src="../images/logo.png">
-            <h4 class="modal-title" >ADD NEW  DATA TO DELIVERY</h4>
+            <h4 class="modal-title" >ADD NEW  DATA TO DELIVERY INTERFACE</h4>
           </div>
         <div class="modal-body">
           <form>
