--- a/Public/index.html
+++ b/Public/index.html
@@ -52,7 +52,7 @@
 			<section>
 				<section class="content">
 					<div class="box bg-1">
-						<button class="button button--aylen button--round-l button--text-thick">i-QRQC</button>
+						<button class="button button--aylen button--round-l button--text-thick"><a href="http://localhost:9090"> i-QRQC </a></button>
 						<button class="button button--aylen button--round-l button--text-thick">QLIK </button>
 					</div>
 					<div class="box bg-2">
