modified core js by adding add data function

--- a/safety/public/index.html
+++ b/safety/public/index.html
@@ -32,47 +32,47 @@
             </div>
             <div class="form-group">
             <label>Plant</label>
-            <select class="form-control">
+            <select class="form-control" id="plant">
               <option>GR</option>
               <option>CAD</option>
             </select>
            </div>
-           <div class="form-group">
+           <div class="form-group" >
             <label>Department</label>
-            <select class="form-control">
+            <select class="form-control" id="department">
             </select>
            </div>
            <div class="form-group">
             <label>Area</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" id="area">
            </div>
            <div class="form-group">
             <label>Alert Severity</label>
-            <select class="form-control">
+            <select class="form-control" id="alert">
             </select>
            </div>
            <div class="form-group">
             <label>Category</label>
-            <select class="form-control">
+            <select class="form-control" id="category">
           
             </select>
            </div>
            <div class="form-group">
             <label>Injury type</label>
-            <select class="form-control">
+            <select class="form-control" id="injury">
           
             </select>
            </div>
            <div class="form-group">
             <label>OSHA Reportable</label>
-            <select class="form-control">
+            <select class="form-control" id="osha">
               <option>Yes</option>
               <option>No</option>
             </select>
            </div>
            <div class="form-group">
             <label>Alert Submitted</label>
-            <select class="form-control">
+            <select class="form-control" id="alert">
               <option>Yes</option>
               <option>No</option>
             </select>
@@ -157,7 +157,7 @@
 
         </tbody>
       </table>
-      <div id="addnewshipment"><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="addNewData">ADD NEW DATA</button></div>
+      <div id="addnewshipment"><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="addNewData_safety">ADD NEW DATA</button></div>
     </div>
   </body>
 </html> 
