--- a/safety/public/index.html
+++ b/safety/public/index.html
@@ -24,7 +24,7 @@
           <form>
             <div class="form-group">
               <label>Date Posted</label>
-              <input type="date" id="date_poated" class="form-control">
+              <input type="date" id="date_posted" class="form-control">
             </div>
             <div class="form-group">
               <label>Incident Report ID</label>
