--- a/safety/public/index.html
+++ b/safety/public/index.html
@@ -109,7 +109,7 @@
 </div>
 
 
-<!--   <div id="myModal2" class="modal fade" role="dialog">
+  <div id="myModal2" class="modal fade" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -118,21 +118,42 @@
         </div>
         <div class="modal-body">
                         
-          <form action ="" method ="get">
-            <p><label>ID:</label>  <input type="text" class="form-control" id="idin" name="ID" disabled></p>
-            <p><label>Date:</label>  <input type="text" class="form-control" id="datein" name="ID"></p>
-            <p><label>Code:</label>  <input type="text" class="form-control" id= "codein" name="ID"></p>
-            <p><label>Name:</label>  <input type="text" class="form-control" id="namein"  name="ID"></p>
-            <p><label>Hours:</label>  <input type="text" class="form-control" id="hoursin" name="ID"></p>
-          </form>
-                        
+          <div class="form-group">
+              <label>Date Posted</label>
+              <input type="text" id="date_postedin" class="form-control">
+          </div>
+
+           <div class="form-group">
+              <label>Incident Report ID</label>
+              <input type="text" id="reportin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Alert Severity</label>
+              <input type="text" id="alertsevin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Plant</label>
+              <input type="text" id="plantin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Area</label>
+              <input type="text" id="areain" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Injury Type</label>
+              <input type="text" id="injuryin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Date Closed</label>
+              <input type="text" id="date_closedin" class="form-control">
+          </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal" id="edit_labor" onclick="">Edit</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal" id="edit_safety" onclick="">Edit</button>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
