--- a/safety/public/index.html
+++ b/safety/public/index.html
@@ -114,19 +114,23 @@
       <div class="modal-content">
         <div class="modal-header">
           <img id="modal-img" src="../images/logo.png">
-            <h4 class="modal-title">EDIT LABOR DATA</h4>
+            <h4 class="modal-title">EDIT SAFETY DATA</h4>
         </div>
         <div class="modal-body">
-                        
-          <div class="form-group">
-              <label>Date Posted</label>
-              <input type="text" id="date_postedin" class="form-control">
+           <div class="form-group">
+              <label> ID</label>
+              <input type="text" id="idin" class="form-control" disabled>
           </div>
-
            <div class="form-group">
               <label>Incident Report ID</label>
               <input type="text" id="reportin" class="form-control">
+          </div>             
+          <div class="form-group">
+              <label>Date Posted</label>
+              <input type="date" id="date_postedin" class="form-control">
           </div>
+
+           
            <div class="form-group">
               <label>Alert Severity</label>
               <input type="text" id="alertsevin" class="form-control">
@@ -134,6 +138,10 @@
            <div class="form-group">
               <label>Plant</label>
               <input type="text" id="plantin" class="form-control">
+          </div>
+          <div class="form-group">
+              <label>Department</label>
+              <input type="text" id="deptin" class="form-control">
           </div>
            <div class="form-group">
               <label>Area</label>
@@ -145,7 +153,7 @@
           </div>
            <div class="form-group">
               <label>Date Closed</label>
-              <input type="text" id="date_closedin" class="form-control">
+              <input type="date" id="date_closedin" class="form-control">
           </div>
         </div>
         <div class="modal-footer">
@@ -166,8 +174,9 @@
       <table id="myTable_safety" class= "cell-border"  width="90%">
         <thead class='thead-inverse'>
           <tr>
-            <th>Date Posted</th>
+            <th>ID</th>
             <th>Incident Report ID</th>
+            <th>Date Posted</th>
             <th>Alert Sensetivity</th>
             <th>Plant</th>
             <th>Department</th>
