--- a/Public/index.html
+++ b/Public/index.html
@@ -34,7 +34,7 @@
 			<section> 
 				<section class="content">
 					<div class="box bg-1">
-						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="#">SAFETY</a></span></button>
+						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="safety.html">SAFETY</a></span></button>
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span>QUALITY</span></button>
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-reply"></i><span><a href="finance.html">FINANCE</a></span></button>
 					</div>
