added mixing iqrqc

--- a/Public/mixing.html
+++ b/Public/mixing.html
@@ -35,7 +35,7 @@
 			<h2>PRODUCTION CONTROL -MIXING</h2>
 				<section class="content">
 					<div class="box bg-1">
-					<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="#">i-QRQC</a></span></button>
+					<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="http://localhost:9090/view_mixing">i-QRQC</a></span></button>
 					<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span><a href="qlityapu.html">QUALITY</a></span></button>
 					<button class="button button--isi button--border-thin button--size-s button--round-s"><i class="button__icon icon icon-box"></i><span><a href="mixeff.html">EFF</a></span></button>
 					
