fixed the glitch due to alex's mistake

--- a/Public/safety.html
+++ b/Public/safety.html
@@ -43,6 +43,15 @@
             </select>
            </div>
            <div class="form-group">
+            <label>Shift</label>
+            <select class="form-control" id="shift">
+            <option>1ST</option>
+            <option>2ND</option>
+            <option>3RD</option>
+            <option>N/A</option>
+            </select>
+           </div>
+           <div class="form-group">
             <label>Area</label>
             <input type="text" class="form-control" id="area">
            </div>
@@ -143,6 +152,10 @@
               <label>Department</label>
               <input type="text" id="deptin" class="form-control">
           </div>
+          <div class="form-group">
+              <label>Shift</label>
+              <input type="text" id="Shiftin" class="form-control">
+          </div>
            <div class="form-group">
               <label>Area</label>
               <input type="text" id="areain" class="form-control">
@@ -180,6 +193,7 @@
             <th>Alert Sensetivity</th>
             <th>Plant</th>
             <th>Department</th>
+            <th>Shift</th>
             <th>Area</th>
             <th>Injury Type</th>
             <th>Date Closed</th>
