--- a/Public/safety.html
+++ b/Public/safety.html
@@ -190,7 +190,7 @@
             <th>ID</th>
             <th>Incident Report ID</th>
             <th>Date Posted</th>
-            <th>Alert Sensetivity</th>
+            <th>Alert Severity</th>
             <th>Plant</th>
             <th>Department</th>
             <th>Shift</th>
