--- a/Public/index.html
+++ b/Public/index.html
@@ -53,7 +53,7 @@
 				<section class="content">
 					<div class="box bg-1">
 						<button class="button button--aylen button--round-l button--text-thick"><a href="http://localhost:9090"> i-QRQC </a></button>
-						<button class="button button--aylen button--round-l button--text-thick">QLIK </button>
+						<button class="button button--aylen button--round-l button--text-thick"><a href="https://172.24.253.4:hub">QLIK</a> </button>
 					</div>
 					<div class="box bg-2">
 						<button class="button button--aylen button--border-thin button--round-s"><a href="mixing.html"> MIXING </a></button>
