--- a/Public/mixscrap.html
+++ b/Public/mixscrap.html
@@ -29,7 +29,10 @@
           
           <p><label>Date:</label>  <input type="date" class="form-control" id="datebox" name="ID"></p>
           <p><label>Shift:</label>  <select type="text" class="form-control" id="shift" name="ID"><option>1ST</option><option>2ND</option><option>3RD</option> <option>N/A</option> </select></p>
-          <p><label>Category:</label>  <input type="text" class="form-control" id="category" name="ID"></p>
+          <p><label>Category:</label>  <select type="text" class="form-control" id="category" name="ID">
+          <option>Scrap</option> 
+          <option>Non Confirmity</option>
+          </select></p>
           <p><label>Code:</label>  <select type="text" class="form-control" id="code" name="ID"></select></br></p>
           <p><label>Part Number:</label>  <input type="text" class="form-control" id="partno" name="ID"></br></p>
           <p><label>Batches:</label>  <input type="text" class="form-control" id="batches" name="ID"></br></p>
