added time pulldown menu to delivery and modified plant menu everywhere

--- a/Public/dwt.html
+++ b/Public/dwt.html
@@ -25,8 +25,10 @@
           <p><label>Date:</label>  <input type="date" class="form-control" id="datebox" name="ID"></p>
           <p><label>Plant:</label>  <select type="text" class="form-control" id="plant" name="ID">
             <option>  </option>
-            <option>  Grand Rapids</option>
-            <option>  Cadillac</option>
+            <option> Grand Rapids</option>
+            <option> Cadillac</option>
+            <option>GR/CD</option>
+            <option>N/A</option>
           </select>
           </p>
           <p><label>Department:</label>  <select type="text" class="form-control" id="department" name="ID"> </select></p>
