--- a/Public/index.html
+++ b/Public/index.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="box bg-3">
 						<button class="button button--saqui button--inverted button--text-thick button--text-upper button--size-s" data-text="AUTOMATION">AUTOMATION</button>
-						<button class="button button--saqui button--inverted button--text-thick button--text-upper button--size-s" data-text="MOULDING">MOULDING</button>
+						<button class="button button--saqui button--inverted button--text-thick button--text-upper button--size-s" data-text="MOULDING">MOLDING</button>
 					</div>
 				</section>
 			</section>
