--- a/Public/qlityapu.html
+++ b/Public/qlityapu.html
@@ -28,8 +28,11 @@
       <div class="form-group">
       <label>Plant</label>
       <select class="form-control" id="plant">
-      <option>Grand Rapids</option>
-      <option>CAD</option>
+      <option>  </option>
+            <option> Grand Rapids</option>
+            <option> Cadillac</option>
+            <option>GR/CD</option>
+            <option>N/A</option>
       </select>
       <label>Department</label>
       <select class="form-control" id="department">
