--- a/Public/safety.html
+++ b/Public/safety.html
@@ -33,8 +33,11 @@
             <div class="form-group">
             <label>Plant</label>
             <select class="form-control" id="plant">
-              <option>GR</option>
-              <option>CAD</option>
+              <option>  </option>
+            <option> Grand Rapids</option>
+            <option> Cadillac</option>
+            <option>GR/CD</option>
+            <option>N/A</option>
             </select>
            </div>
            <div class="form-group" >
