--- a/Public/delivery.html
+++ b/Public/delivery.html
@@ -32,6 +32,8 @@
             <option>  </option>
             <option> Grand Rapids</option>
             <option> Cadillac</option>
+            <option>GR/CD</option>
+            <option>N/A</option>
           </select>
           <label>Department</label>
           <select class="form-control" id="dept">
@@ -50,6 +52,60 @@
     <div class="form-group">
     <label for="exampleInputEmail1">Expedite</label>
     <input type="email" class="form-control" id="expedite">
+    </div>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Time</label>
+    <select id="time">
+        <option>12:00 AM</option>
+        <option>12:30 AM</option>
+        <option>1:00 AM</option>
+        <option>1:30 AM</option>
+        <option>2:00 AM</option>
+        <option>2:30 AM</option>
+        <option>3:00 AM</option>
+        <option>3:30 AM</option>
+        <option>4:00 AM</option>
+        <option>4:30 AM</option>
+        <option>5:00 AM</option>
+        <option>5:30 AM</option>
+        <option>6:00 AM</option>
+        <option>6:30 AM</option>
+        <option>7:00 AM</option>
+        <option>7:30 AM</option>
+        <option>8:00 AM</option>
+        <option>8:30 AM</option>
+        <option>9:00 AM</option>
+        <option>9:30 AM</option>
+        <option>10:00 AM</option>
+        <option>10:30 AM</option>
+        <option>11:00 AM</option>
+        <option>11:30 AM</option>
+        <option>12:00 PM</option>
+        <option>12:30 PM</option>
+        <option>1:00 PM</option>
+        <option>1:30 PM</option>
+        <option>2:00 PM</option>
+        <option>2:30 PM</option>
+        <option>3:00 PM</option>
+        <option>3:30 PM</option>
+        <option>4:00 PM</option>
+        <option>4:30 PM</option>
+        <option>5:00 PM</option>
+        <option>5:30 PM</option>
+        <option>6:00 PM</option>
+        <option>6:30 PM</option>
+        <option>7:00 PM</option>
+        <option>7:30 PM</option>
+        <option>8:00 PM</option>
+        <option>8:30 PM</option>
+        <option>9:00 PM</option>
+        <option>9:30 PM</option>
+        <option>10:00 PM</option>
+        <option>10:30 PM</option>
+        <option>11:00 PM</option>
+        <option>11:30 PM</option>
+
+    </select>
     </div>
     </div>
     <div class="form-group">
@@ -88,8 +144,11 @@
     <div class="form-group">
     <label>Plant</label>
     <select class="form-control" id="plantin">
-    <option>Grand Rapids</option>
-    <option>CAD</option>
+            <option>  </option>
+            <option> Grand Rapids</option>
+            <option> Cadillac</option>
+            <option>GR/CD</option>
+            <option>N/A</option>
     </select>
     <label>Department</label>
     <select class="form-control" id="deptin">
