background of div changed

--- a/Public/index.html
+++ b/Public/index.html
@@ -34,12 +34,12 @@
 			<section> 
 				<section class="content">
 					<div class="box bg-1">
-						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="safety.html">SAFETY</a></span></button>
-						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span>QUALITY</span></button>
-						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-reply"></i><span><a href="finance.html">FINANCE</a></span></button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l"><i class="button__icon icon icon-box"></i><span><a href="safety.html">SAFETY</a></span></button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l"><i class="button__icon icon icon-forward"></i><span>QUALITY</span></button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l"><i class="button__icon icon icon-reply"></i><span><a href="finance.html">FINANCE</a></span></button>
 					</div>
 					<div class="box bg-2">
-						<button class="button button--isi button--border-thin button--size-s button--round-s"><i class="button__icon icon icon-box"></i><span><a href="labor.html">LABOR</a></span></button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l"><i class="button__icon icon icon-box"></i><span><a href="labor.html">LABOR</a></span></button>
 					</div>
 				</section>
 			</section>
@@ -52,15 +52,15 @@
 			<section>
 				<section class="content">
 					<div class="box bg-1">
-						<button class="button button--aylen button--round-l button--text-thick">i-QRQC</button>
-						<button class="button button--aylen button--round-l button--text-thick">QLIK </button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l">i-QRQC</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l">QLIK </button>
 					</div>
 					<div class="box bg-2">
-						<button class="button button--aylen button--border-thin button--round-s"><a href="mixing.html"> MIXING </a></button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l"><a href="mixing.html"> MIXING </a></button>
 					</div>
 					<div class="box bg-3">
-						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-s">CEMENTING</button>
-						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-s">AUTOMATION</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l">CEMENTING</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l">AUTOMATION</button>
 					</div>
 				</section>
 			</section>
@@ -73,15 +73,15 @@
 			<section>
 				<section class="content">
 					<div class="box bg-1">
-						<button class="button button--saqui button--round-l button--text-thick" data-text="i-QRQC">i-QRQC</button>
-						<button class="button button--saqui button--round-l button--text-thick" data-text="QLIK">QLIK</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l" data-text="i-QRQC">i-QRQC</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l" data-text="QLIK">QLIK</button>
 					</div>
 					<div class="box bg-2">
-						<button class="button button--saqui button--inverted button--border-thin button--round-s" data-text="CEMENTING">CEMENTING</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l" data-text="CEMENTING">CEMENTING</button>
 					</div>
 					<div class="box bg-3">
-						<button class="button button--saqui button--inverted button--text-thick button--text-upper button--size-s" data-text="AUTOMATION">AUTOMATION</button>
-						<button class="button button--saqui button--inverted button--text-thick button--text-upper button--size-s" data-text="MOULDING">MOULDING</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l" data-text="AUTOMATION">AUTOMATION</button>
+						<button class="button button--aylen button--border-thick button--inverted button--text-upper button--size-l button--round-l" data-text="MOULDING">MOULDING</button>
 					</div>
 				</section>
 			</section>
