--- a/Public/index.html
+++ b/Public/index.html
@@ -22,17 +22,24 @@
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		</script>
 		<script type="text/javascript" src="js/core.js"></script>
+		<link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"></style>
+    <script type="text/javascript" src="http://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
 	</head>
 	<body id="front_page_body">
+	<header class="codrops-header">
+				<h1> Common Gateway to all Interfaces <span> Responsive Interface for navigating to all other interfaces</span></h1>
+
+				<!-- <div class="codrops-links">
+					<a class="codrops-icon codrops-icon--prev" href="http://tympanus.net/Tutorials/AnimatedTextFills/" title="Previous Demo"><span>Previous Demo</span></a>
+					<a class="codrops-icon codrops-icon--drop" href="http://tympanus.net/codrops/?p=23342" title="Back to the article"><span>Back to the Codrops article</span></a>
+				</div> -->
+				
+			</header>
 		<div class="container">
-			<nav class="navbar navbar-default" id="common">
-				<div class="navbar-header">
-					<img src="../Images/logo.png">
-					<p class="navbar-text" id="nav-id">Common Interfaces</p>
-				</div>
-			</nav>
+			<img  class="image"  src="/Images/logo.png">
 			<section> 
 				<section class="content">
+				    <h2>Common Interfaces</h2>
 					<div class="box bg-1">
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="safety.html">SAFETY</a></span></button>
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span>QUALITY</span></button>
@@ -43,17 +50,14 @@
 					</div>
 				</section>
 			</section>
-			<nav class="navbar navbar-default" id="gr">
-				<div class="navbar-header">
-					<img src="../Images/logo.png">
-					<p class="navbar-text" id="nav-id">Grand Rapids</p>
-				</div>
-			</nav>
+			 <img  class="image"  src="/Images/logo.png">
 			<section>
 				<section class="content">
+				
+				 <h2>Grand Rapids</h2>
 					<div class="box bg-1">
 						<button class="button button--aylen button--round-l button--text-thick"><a href="http://localhost:9090"> i-QRQC </a></button>
-						<button class="button button--aylen button--round-l button--text-thick"><a href="https://172.24.253.4:hub">QLIK</a> </button>
+						<button class="button button--aylen button--round-l button--text-thick"><a href="https:">QLIK</a> </button>
 					</div>
 					<div class="box bg-2">
 						<button class="button button--aylen button--border-thin button--round-s"><a href="mixing.html"> MIXING </a></button>
@@ -64,14 +68,9 @@
 					</div>
 				</section>
 			</section>
-			<nav class="navbar navbar-default" id="cad">
-				<div class="navbar-header">
-					<img src="../Images/logo.png">
-					<p class="navbar-text" id="nav-id">Cadillac</p>
-				</div>
-			</nav>
-			<section>
+			<img  class="image"  src="/Images/logo.png">
 				<section class="content">
+				    <h2>Cadillac</h2>
 					<div class="box bg-1">
 						<button class="button button--saqui button--round-l button--text-thick" data-text="i-QRQC">i-QRQC</button>
 						<button class="button button--saqui button--round-l button--text-thick" data-text="QLIK">QLIK</button>
