--- a/Public/mixing.html
+++ b/Public/mixing.html
@@ -29,7 +29,7 @@
  <body id="front_page_body">
  
  	<div class="container">
- 	
+ 	<img  class="image"  src="/Images/logo.png">
 		
         <section> 
 			<h2>PRODUCTION CONTROL -MIXING</h2>
