--- a/Public/index.html
+++ b/Public/index.html
@@ -36,6 +36,14 @@
 				
 			</header>
 		<div class="container">
+
+			<section>
+				<section class="content">
+				<video id="video" width="980" controls muted autoplay loop>
+  				<source src="/Images/Contrib.mp4" type="video/mp4" >
+				</video>	
+				</section>
+			</section>
 			<img  class="image"  src="/Images/logo.png">
 			<section> 
 				<section class="content">
