added quality plant to link

--- a/Public/index.html
+++ b/Public/index.html
@@ -29,18 +29,14 @@
 	<header class="codrops-header">
 				<h1> Common Gateway to all Interfaces <span> Responsive Interface for navigating to all other interfaces</span></h1>
 
-				<!-- <div class="codrops-links">
-					<a class="codrops-icon codrops-icon--prev" href="http://tympanus.net/Tutorials/AnimatedTextFills/" title="Previous Demo"><span>Previous Demo</span></a>
-					<a class="codrops-icon codrops-icon--drop" href="http://tympanus.net/codrops/?p=23342" title="Back to the article"><span>Back to the Codrops article</span></a>
-				</div> -->
+				
 				
 			</header>
 		<div class="container">
-
 			<section>
 				<section class="content">
-				<video id="video" width="980" controls muted autoplay loop>
-  				<source src="/Images/Contrib.mp4" type="video/mp4" >
+				<video id="myvideo" width="980" controls muted autoplay loop>
+					<source  src="/Images/Contrib.mp4" type="video/mp4" >
 				</video>	
 				</section>
 			</section>
@@ -50,7 +46,7 @@
 				    <h2>Common Interfaces</h2>
 					<div class="box bg-1">
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-box"></i><span><a href="safety.html">SAFETY</a></span></button>
-						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span>QUALITY</span></button>
+						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-forward"></i><span><a href="qualityplant.html">QUALITY</a></span></button>
 						<button class="button button--isi button--text-thick button--text-upper button--size-s"><i class="button__icon icon icon-reply"></i><span><a href="finance.html">FINANCE</a></span></button>
 					</div>
 					<div class="box bg-2">
