--- a/Public/qualityplant.html
+++ b/Public/qualityplant.html
@@ -54,6 +54,56 @@
     </div>
   </div>
 </div>  
+<div id="myModal2" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <img id="modal-img" src="../images/logo.png">
+            <h4 class="modal-title">EDIT QUALITY DATA</h4>
+        </div>
+        <div class="modal-body">
+           <div class="form-group">
+              <label> ID</label>
+              <input type="text" id="idin" class="form-control" disabled>
+          </div>
+                     
+          <div class="form-group">
+              <label>Date Posted</label>
+              <input type="date" id="date_postedin" class="form-control">
+          </div>
+
+           
+           <div class="form-group">
+              <label>QR No</label>
+              <input type="text" id="qrnoin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Customer</label>
+              <input type="text" id="custin" class="form-control">
+          </div>
+          <div class="form-group">
+              <label>Havs Part No</label>
+              <input type="text" id="havsin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Quantity Rejected</label>
+              <input type="text" id="qrejectin" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Issue Description</label>
+              <input type="text" id="issuein" class="form-control">
+          </div>
+           <div class="form-group">
+              <label>Date Closed</label>
+              <input type="date" id="date_closedin" class="form-control">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal" id="edit_qualityplant" onclick="">Edit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
